Update apropos.html : ajout d'un glossaire
je teste un glossaire

--- a/apropos.html
+++ b/apropos.html
@@ -164,6 +164,28 @@
         </div>
     </div>
 
+    <!-- GLOSSAIRE -->
+<section id="glossaire" class="about-text" style="margin: 0 10% 150px 10%; background: rgba(255, 255, 255, 0.08); padding: 40px; border-radius: 20px; box-shadow: 0 0 25px rgba(255,255,255,0.2); backdrop-filter: blur(10px);">
+    <h2 style="color: #ffd220; font-size: 36px; margin-bottom: 15px;">Glossaire</h2>
+    <p style="font-size: 18px; line-height: 1.6; color: rgba(255,255,255,0.8);">
+        Petit dictionnaire des termes utilisés chez GRIDWEAR.
+    </p>
+
+    <dl style="margin-top: 20px;">
+        <dt style="color:#ffd220; font-size:22px;">Coton bio</dt>
+        <dd style="margin-bottom:20px; font-size:16px;">Coton cultivé sans pesticides, respectueux de l'environnement.</dd>
+
+        <dt style="color:#ffd220; font-size:22px;">Sérigraphie</dt>
+        <dd style="margin-bottom:20px; font-size:16px;">Technique d’impression résistante, utilisée pour nos visuels premium.</dd>
+
+        <dt style="color:#ffd220; font-size:22px;">GSM</dt>
+        <dd style="margin-bottom:20px; font-size:16px;">Unité indiquant l’épaisseur et la qualité du tissu.</dd>
+
+        <dt style="color:#ffd220; font-size:22px;">Précommande</dt>
+        <dd style="margin-bottom:20px; font-size:16px;">Système permettant de réserver une pièce avant sa production.</dd>
+    </dl>
+</section>
+
     <script>
         const observer = new IntersectionObserver(entries => {
             entries.forEach(entry => {
@@ -176,3 +198,4 @@
     </script>
 </body>
 </html>
+
