Update apropos.html : Glossaire version 3

--- a/apropos.html
+++ b/apropos.html
@@ -166,7 +166,7 @@
 
  <!-- GLOSSAIRE (visible immédiatement) -->
 <section id="glossaire" style="margin: 0 10% 150px 10%; background: rgba(255,255,255,0.08); padding: 40px; border-radius: 20px; box-shadow: 0 0 25px rgba(255,255,255,0.2); backdrop-filter: blur(10px); transform: none; opacity: 1;">
-  <h2 style="color: #ffd220; font-size: 36px; margin-bottom: 15px;">Glossaire</h2>
+  <h2 style="color: #ffd220; font-size: 36px; margin-bottom: 15px;">En bref</h2>
   <p style="font-size: 18px; line-height: 1.6; color: rgba(255,255,255,0.8);">Petit dictionnaire des termes utilisés chez GRIDWEAR.</p>
 
   <dl style="margin-top:20px;">
@@ -179,8 +179,6 @@
     <dt style="color:#ffd220; font-size:22px;">GSM</dt>
     <dd style="margin-bottom:20px; font-size:16px;">Unité indiquant l’épaisseur et la qualité du tissu.</dd>
 
-    <dt style="color:#ffd220; font-size:22px;">Précommande</dt>
-    <dd style="margin-bottom:20px; font-size:16px;">Système permettant de réserver une pièce avant sa production.</dd>
   </dl>
 </section>
 
@@ -196,5 +194,6 @@
     </script>
 </body>
 </html>
+
 
 
