Update apropos.html : glossaire 4

--- a/apropos.html
+++ b/apropos.html
@@ -179,6 +179,24 @@
     <dt style="color:#ffd220; font-size:22px;">GSM</dt>
     <dd style="margin-bottom:20px; font-size:16px;">Unité indiquant l’épaisseur et la qualité du tissu.</dd>
 
+  <dt style="color:#ffd220; font-size:22px;">Ripstop</dt>
+  <dd style="margin-bottom:20px; font-size:16px;">
+    Tissu robuste et anti-déchirures, utilisé sur les pantalons cargo pour un style technique inspiré de l’automobile.
+  </dd>
+
+  <dt style="color:#ffd220; font-size:22px;">Inspirations WEC & F1</dt>
+  <dd style="margin-bottom:20px; font-size:16px;">
+    Les univers du 24h du Mans et de la Formule 1 moderne influencent l’esthétique et la direction créative de la marque.
+  </dd>
+
+  <dt style="color:#ffd220; font-size:22px;">Zéro Dropshipping</dt>
+  <dd style="margin-bottom:20px; font-size:16px;">
+    Tous les designs sont créés en interne et produits localement, garantissant authenticité et haute qualité.
+  </dd>
+
+</dl>
+
+
   </dl>
 </section>
 
@@ -194,6 +212,7 @@
     </script>
 </body>
 </html>
+
 
 
 
