--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Découvrez les nouveautés Gridwear : vetements, accessoires et bien plus encore. Faites-vous plaisir avec les nouveauté et les exclusivités.">
     <meta name="keywords" content="Gridwear, accessoires, nouveautés, vetements, mode, boutique en ligne, vêtements futuristes, panier, paiement sécurisé, automobile, sport">
-    <meta name="author" content="Emma Stella Ntsame Ayoo Obame, Marc, Pierre">
+    <meta name="author" content="Nathan, Sarah, Emma">
     <meta property="og:title" content="Gridwear">
     <meta property="og:description" content="Parcourez les derniers accessoires et vetements Gridwear et explorez nos produits.">
     <meta property="og:type" content="website">
@@ -502,3 +502,4 @@
     <script src="index.js"></script>
 </body>
 </html>
+
