--- a/information.html
+++ b/information.html
@@ -107,7 +107,7 @@
                     <li>Dimanche : Fermé</li>
                 </ul>
                 <h3>Adresse</h3>
-                <p>12 rue de la Mode, 75000 Paris, France</p>
+                <p>101 Av. des Champs-Élysées, 75008 Paris</p>
                 <div class="map-container">
                     <iframe 
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2624.999488949084!2d2.292292615674964!3d48.85837397928761!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e66fdeb16d07ed%3A0x123456789abcdef!2s12%20Rue%20de%20la%20Mode%2C%2075000%20Paris%2C%20France!5e0!3m2!1sfr!2sfr!4v1600000000000!5m2!1sfr!2sfr" 
