Add contact mail section to information.html
Added a contact mail section with a button to send an email.

--- a/information.html
+++ b/information.html
@@ -154,11 +154,15 @@
                 </form>
             </div>
 
-            <div class="social-links">
-                <span class="social-icon">📘</span>
-                <span class="social-icon">📸</span>
-                <span class="social-icon">🎵</span>
-                <span class="social-icon">💬</span>
+            <div class="contact-mail-container">
+                <p class="contact-text">
+                    Vous préférez nous contacter directement depuis votre boîte mail ?
+                </p>
+
+                <a href="mailto:contact@gridwear.fr?subject=Contact%20depuis%20le%20site"
+                class="contact-mail-btn">
+                    📩 Envoyer un message
+                </a>
             </div>
 
         </section>
