--- a/information.html
+++ b/information.html
@@ -159,8 +159,10 @@
                     Vous préférez nous contacter directement depuis votre boîte mail ?
                 </p>
 
-                <a href="mailto:contact@gridwear.fr?subject=Contact%20depuis%20le%20site"
-                class="contact-mail-btn">
+                   <a href="mailto:contact@gridwear.fr
+?subject=Contact%20depuis%20le%20site%20GridWear
+&body=Bonjour%2C%0D%0A%0D%0AJe%20vous%20contacte%20depuis%20votre%20site%20GridWear%20concernant%20%3A%0D%0A%0D%0A"
+        class="contact-mail-btn">
                     📩 Envoyer un message
                 </a>
             </div>
